lint-staged test

--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.7"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --config ./.prettierrc.js --write",
+      "git add"
+    ],
+    "**/*.{css,scss,md,html,json}": [
+      "prettier --config ./.prettierrc.js --write",
+      "git add"
     ]
   }
 }
