integration of dummy data for program list. implementation of Outlet equivalent and dynamic routing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -109,6 +109,7 @@
     "react/jsx-closing-bracket-location": [
       2,
       "tag-aligned"
-    ]
+    ],
+    "@next/next/no-img-element": "off"
   }
 }
