--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "eslint-config-next": "13.4.12",
     "jwt-decode": "^3.1.2",
