--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "eslint-config-next": "13.4.12",
+    "html2pdf.js": "^0.10.1",
     "jwt-decode": "^3.1.2",
     "next": "^13.4.19",
     "react": "18.2.0",
